// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UI Components - Snapshot Tests Badge Component should match snapshot for default badge 1`] = `
<View
  className="px-2 py-1 rounded-full bg-green-500 "
>
  <Text
    className="text-xs font-medium text-white"
  >
    Default
  </Text>
</View>
`;

exports[`UI Components - Snapshot Tests Badge Component should match snapshot for destructive badge 1`] = `
<View
  className="px-2 py-1 rounded-full bg-red-500 "
>
  <Text
    className="text-xs font-medium text-white"
  >
    Destructive
  </Text>
</View>
`;

exports[`UI Components - Snapshot Tests Badge Component should match snapshot for outline badge 1`] = `
<View
  className="px-2 py-1 rounded-full bg-transparent border border-gray-400 "
>
  <Text
    className="text-xs font-medium text-gray-700"
  >
    Outline
  </Text>
</View>
`;

exports[`UI Components - Snapshot Tests Badge Component should match snapshot for secondary badge 1`] = `
<View
  className="px-2 py-1 rounded-full bg-yellow-500 "
>
  <Text
    className="text-xs font-medium text-white"
  >
    Secondary
  </Text>
</View>
`;

exports[`UI Components - Snapshot Tests Button Component should match snapshot for default button 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "opacity": 1,
    }
  }
>
  Click Me
</View>
`;

exports[`UI Components - Snapshot Tests Button Component should match snapshot for destructive button 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "opacity": 1,
    }
  }
>
  Destructive Button
</View>
`;

exports[`UI Components - Snapshot Tests Button Component should match snapshot for disabled button 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "opacity": 1,
    }
  }
>
  Disabled Button
</View>
`;

exports[`UI Components - Snapshot Tests Button Component should match snapshot for outline button 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "opacity": 1,
    }
  }
>
  Outline Button
</View>
`;

exports[`UI Components - Snapshot Tests Card Component should match snapshot for card with custom style 1`] = `
<View
  className="bg-white rounded-lg border border-gray-200 "
  style={
    {
      "padding": 20,
    }
  }
>
  <View
    className="bg-white rounded-lg border border-gray-200 "
  >
    Custom Card
  </View>
</View>
`;

exports[`UI Components - Snapshot Tests Card Component should match snapshot for default card 1`] = `
<View
  className="bg-white rounded-lg border border-gray-200 "
>
  <View
    className="bg-white rounded-lg border border-gray-200 "
  >
    Card Content
  </View>
</View>
`;
